deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Jury_dagster
spec:
  type: LoadBalancer
  selector:
    app: Jury_dagster
  ports:
  - protocol: TCP
    port: 4001
    targetPort: 4000
