deployments/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dagster
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: dagster.dealwallet.com
      http:
        paths:
          - backend:
              service:
                name: dagster
                port:
                  number: 4001
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dagster.dealwallet.com
